--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,30 @@
     background-color: #0056b3;
   }
   
+.all-services {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    justify-self: center;
+  }
+  
+  .all-services h3 {
+    background-color: #015623;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 30px;
+    font-size: 20px;
+    width: 200px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .all-services h3:hover {
+    background-color: #00a7b3;
+  }
+
   .exchange-rates table {
     width: 100%;
     border-collapse: collapse;
